--- a/www.dz-rs.si/616fb43dd4f5d9ad47b591cfeb5787143fe7ffbf.yml
+++ b/www.dz-rs.si/616fb43dd4f5d9ad47b591cfeb5787143fe7ffbf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 02 May 2018 22:01:40 GMT
+    - Fri, 04 May 2018 15:33:22 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000xbuPqTGRdId11yBb2UDanEd:-1; Path=/; HttpOnly
+    - JSESSIONID=00002q4ujo_ATrm4wuDaH4-fW--:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;155358;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->10;EvalII->10;CHd;FP2->10;WS=fd938310;default;FP4->65;C003;
+    - F7360B2047A90E4D;87d9ab10;1264000;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->52;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155358)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1264000)
     Content-Length:
-    - '13468'
+    - '13466'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 02 May 2018 22:01:37 GMT
+recorded_at: Fri, 04 May 2018 15:33:18 GMT
