--- a/www.dz-rs.si/c08470679752f9b1005387f63b966289dcc45f5f.yml
+++ b/www.dz-rs.si/c08470679752f9b1005387f63b966289dcc45f5f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 02 May 2018 22:02:08 GMT
+    - Fri, 04 May 2018 15:33:47 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000Q6xtURwIqTuAkS79o-FsCFm:-1; Path=/; HttpOnly
+    - JSESSIONID=0000mEuG01Sq8qfYoM0EYLLjIju:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;155412;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->51;C003;
+    - F7360B2047A90E4D;87d9ab10;1264095;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->10;EvalII->10;CHd;FP2->10;WS=fd938310;default;FP4->65;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155412)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1264095)
     Content-Length:
-    - '13109'
+    - '13110'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 02 May 2018 22:02:05 GMT
+recorded_at: Fri, 04 May 2018 15:33:44 GMT
