--- a/www.dz-rs.si/1f0793c809f253d059ca7c8e722389c6984b8d7e.yml
+++ b/www.dz-rs.si/1f0793c809f253d059ca7c8e722389c6984b8d7e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 02 May 2018 22:03:00 GMT
+    - Fri, 04 May 2018 15:34:38 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000F76iqCIjJijPPFijvq4aHZ0:-1; Path=/; HttpOnly
+    - JSESSIONID=0000Z-QLrnNhGPMjYA-D_qLJ_qC:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;155547;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->6;EvalII->6;CHd;FP2->6;WS=fd938310;default;FP4->52;C003;
+    - F7360B2047A90E4D;87d9ab10;1264219;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->6;EvalII->6;CHd;FP2->6;WS=fd938310;default;FP4->69;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155547)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1264219)
     Content-Length:
     - '13015'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 02 May 2018 22:02:57 GMT
+recorded_at: Fri, 04 May 2018 15:34:35 GMT
