--- a/www.dz-rs.si/9a13af929001c5e9675c9dbced74f8f9eb2e139e.yml
+++ b/www.dz-rs.si/9a13af929001c5e9675c9dbced74f8f9eb2e139e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 02 May 2018 22:03:14 GMT
+    - Fri, 04 May 2018 15:34:53 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000rTKYN4fUb0mYSI96oTlCsvm:-1; Path=/; HttpOnly
+    - JSESSIONID=0000Q2upN2E5pbuVXPV8FV71RiS:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;155573;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->54;C003;
+    - F7360B2047A90E4D;87d9ab10;1264244;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->14;EvalII->14;CHd;FP2->14;WS=fd938310;default;FP4->57;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155573)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1264244)
     Content-Length:
-    - '14605'
+    - '14606'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 02 May 2018 22:03:12 GMT
+recorded_at: Fri, 04 May 2018 15:34:49 GMT
