--- a/www.dz-rs.si/961865d67f98d1a45e89a1b0cea87b6164d900b8.yml
+++ b/www.dz-rs.si/961865d67f98d1a45e89a1b0cea87b6164d900b8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 02 May 2018 22:03:27 GMT
+    - Fri, 04 May 2018 15:35:06 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000mgHwUDO1A2rRBGahIdtqhvH:-1; Path=/; HttpOnly
+    - JSESSIONID=0000jsJD61zx7WpV8zPrHp7fW0P:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;155597;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->52;C003;
+    - F7360B2047A90E4D;87d9ab10;1264307;usrLkup->1;usrBase->1;getPRBefFind->1;getPRBefFind->1;PRAfterFind->1;portal-en;publicURL->1;http-www;default;SH;FF1End->1;SendSoapStart->1;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->61;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155597)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1264307)
     Content-Length:
-    - '12752'
+    - '12750'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 02 May 2018 22:03:25 GMT
+recorded_at: Fri, 04 May 2018 15:35:03 GMT
