--- a/www.dz-rs.si/39e1fe0c23aa5e53ab6f29c0db974f037f5a8f8b.yml
+++ b/www.dz-rs.si/39e1fe0c23aa5e53ab6f29c0db974f037f5a8f8b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 02 May 2018 22:04:02 GMT
+    - Fri, 04 May 2018 15:35:44 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000MmBeypwixrzMW7VTCWbAh-Y:-1; Path=/; HttpOnly
+    - JSESSIONID=0000zNTTnxctaYsU5jhSmE8E676:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;155675;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->13;EvalII->13;CHd;FP2->13;WS=fd938310;default;FP4->55;C003;
+    - F7360B2047A90E4D;87d9ab10;1264678;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->14;EvalII->14;CHd;FP2->14;WS=fd938310;default;FP4->57;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155675)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1264678)
     Content-Length:
     - '12413'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 02 May 2018 22:04:00 GMT
+recorded_at: Fri, 04 May 2018 15:35:40 GMT
