--- a/www.dz-rs.si/eb9ccbcdb95dae4afef4e99207ff3bd5b6cb3379.yml
+++ b/www.dz-rs.si/eb9ccbcdb95dae4afef4e99207ff3bd5b6cb3379.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 02 May 2018 22:04:30 GMT
+    - Fri, 04 May 2018 15:36:10 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00008pzR6Y5lWRuLAd-dB-tBRFB:-1; Path=/; HttpOnly
+    - JSESSIONID=0000Bggt1xU5qGJFPrhoG2ZTHx3:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;155732;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->17;EvalII->17;CHd;FP2->17;WS=fd938310;default;FP4->65;C003;
+    - F7360B2047A90E4D;87d9ab10;1265018;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->57;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155732)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1265018)
     Content-Length:
-    - '12822'
+    - '12823'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 02 May 2018 22:04:27 GMT
+recorded_at: Fri, 04 May 2018 15:36:07 GMT
