--- a/www.dz-rs.si/e093e790b099a3d8b4cb54cf00553e8cb70579ce.yml
+++ b/www.dz-rs.si/e093e790b099a3d8b4cb54cf00553e8cb70579ce.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 02 May 2018 22:05:45 GMT
+    - Fri, 04 May 2018 15:37:32 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000FGnGSsgQlSsUfUKBc4k-K5O:-1; Path=/; HttpOnly
+    - JSESSIONID=0000o-1g22CdkSn7bCB0ExcCl-A:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;155879;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->73;C003;
+    - F7360B2047A90E4D;87d9ab10;1265284;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->89;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155879)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1265284)
     Content-Length:
-    - '13291'
+    - '13290'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 02 May 2018 22:05:42 GMT
+recorded_at: Fri, 04 May 2018 15:37:29 GMT
