--- a/www.dz-rs.si/b4b50c817588c4c43810a31d3c3079d5e733afdb.yml
+++ b/www.dz-rs.si/b4b50c817588c4c43810a31d3c3079d5e733afdb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 02 May 2018 22:05:53 GMT
+    - Fri, 04 May 2018 15:37:45 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000xYg5BijWBTJqrQbdwRCglJB:-1; Path=/; HttpOnly
+    - JSESSIONID=0000PvkqzQSxCUuPsGWZlbV4gb2:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;155893;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->12;EvalII->12;CHd;FP2->12;WS=fd938310;default;FP4->121;C003;
+    - F7360B2047A90E4D;87d9ab10;1265342;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->7;EvalII->7;CHd;FP2->7;WS=fd938310;default;FP4->58;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155893)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1265342)
     Content-Length:
     - '12818'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 02 May 2018 22:05:51 GMT
+recorded_at: Fri, 04 May 2018 15:37:42 GMT
