--- a/www.dz-rs.si/c3066db391e0df85b6ca1d52476d259a0a7b83e8.yml
+++ b/www.dz-rs.si/c3066db391e0df85b6ca1d52476d259a0a7b83e8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 02 May 2018 22:06:06 GMT
+    - Fri, 04 May 2018 15:38:00 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000Z3R-sh18zeW7cKlNGqJ539l:-1; Path=/; HttpOnly
+    - JSESSIONID=0000HCKLz8EghD0oS33JsZkH-Ly:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;155920;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->56;C003;
+    - F7360B2047A90E4D;87d9ab10;1265374;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->17;EvalII->17;CHd;FP2->17;WS=fd938310;default;FP4->60;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155920)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1265374)
     Content-Length:
-    - '12639'
+    - '12638'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 02 May 2018 22:06:05 GMT
+recorded_at: Fri, 04 May 2018 15:37:56 GMT
